# spin-todo-api

./: Cargo.toml  README.md  spin.toml
src/: lib.rs
src/handlers/: mod.rs  todo.rs
