[package]
name = "spin-todo-api"
authors = ["Thorsten Hans <thorsten.hans@fermyon.com>"]
description = ""
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
spin-sdk = "3.1.0"
uuid = { version = "1.18.0", features = ["v4", "serde"] }

[workspace]
